--- a/style.css
+++ b/style.css
@@ -13,45 +13,84 @@ canvas {
   
 }
 
+/* objects buttons */
 
-.btn-cube button {
-    position: absolute;
-    top: 4%;
-    left: 8px;
+#btn-cube  {
     background-color: rgb(0, 0, 75);
+    position: absolute;
+    top: 5%;
+    left: 15px;
     height: 50px;  
-    width: 50px;
+    width: 100px;
 }
 
-
-
-#close-image img {
-    display: block;
-    height: 50px;  
-    width: 50px;
+#rock-btn img {
     position: absolute;
     top: 15%;
-}
-
-#move-btn {
-    position: absolute;
-    top: 45%;
-    width: 100px;
-}
-#view-btn {
-    position: absolute;
-    top: 50%;
+    left: 15px;
+    height: 50px;  
     width: 100px;
 }
 
-#robot-btn {
+
+#robot-btn  {
     position: absolute;
-    top: 70%;
+    top: 25%;
+    left: 15px;
+    height: 50px;  
     width: 100px;
 }
 
 #robot2-btn {
     position: absolute;
-    top: 75%;
+    top: 35%;
+    left: 15px;
+    height: 50px;  
     width: 100px;
+}
+
+#move-btn {
+    position: absolute;
+    top: 45%;
+    left: 15px;
+    height: 50px;  
+    width: 100px;
+}
+#view-btn {
+    position: absolute;
+    top: 55%;
+    left: 15px;
+    height: 50px;  
+    width: 100px;
+}
+
+/* menu */
+.menu {
+    background: linear-gradient(90deg, rgba(0, 0, 0, 0.701) 16%, rgb(58, 51, 29) 96%); 
+    position: fixed;
+    top: 0px;
+    left: 0px;
+    height: 100%;
+    width: 00px;
+    padding-top: 100px;
+    overflow-x: hidden;
+    transition: all .5s;
+}
+
+.close-btn {
+    position: absolute;
+    right: 20px;
+    top: 5px;
+    font-size: 36px;
+}
+
+
+#open-btn {
+    font-size: 24px;
+    cursor: pointer;
+    position: absolute;
+    top: 30px;
+    left: 30px;
+    transition: all .6s;
+    
 }
