--- a/style.css
+++ b/style.css
@@ -5,12 +5,9 @@ body {
 		
 
 canvas {
-    
     width: 100%; 
     height: 100vh ;
     position: absolute;
-    
-  
 }
 
 /* objects buttons */
@@ -18,79 +15,155 @@ canvas {
 #btn-cube  {
     background-color: rgb(0, 0, 75);
     position: absolute;
-    top: 5%;
-    left: 15px;
+    left: 70px;
     height: 50px;  
     width: 100px;
+    cursor: pointer;
 }
 
 #rock-btn img {
     position: absolute;
-    top: 15%;
-    left: 15px;
+    top: 75px;
+    left: 70px;
     height: 50px;  
     width: 100px;
+    cursor: pointer;
 }
 
 
 #robot-btn  {
     position: absolute;
-    top: 25%;
-    left: 15px;
+    left: 70px;
     height: 50px;  
     width: 100px;
+    cursor: pointer;
 }
 
 #robot2-btn {
     position: absolute;
-    top: 35%;
-    left: 15px;
+    top: 55%;
+    left: 70px;
     height: 50px;  
     width: 100px;
+    cursor: pointer;
 }
 
 #move-btn {
     position: absolute;
-    top: 45%;
-    left: 15px;
+    top: 90%;
+    left: 55%;
     height: 50px;  
     width: 100px;
+    background-color: Transparent;
+    background-repeat:no-repeat;
+    border: none;
+    cursor:pointer;
+    overflow: hidden;   
+    font-size: 20px;  
+    font-family: cursive;
 }
 #view-btn {
     position: absolute;
-    top: 55%;
-    left: 15px;
+    top: 90%;
+    left: 45%;
     height: 50px;  
     width: 100px;
+    background-color: Transparent;
+    background-repeat:no-repeat;
+    border: none;
+    cursor:pointer;
+    overflow: hidden;   
+    font-size: 20px;   
+    font-family: cursive;
 }
 
-/* menu */
-.menu {
-    background: linear-gradient(90deg, rgba(0, 0, 0, 0.701) 16%, rgb(58, 51, 29) 96%); 
-    position: fixed;
-    top: 0px;
-    left: 0px;
-    height: 100%;
-    width: 00px;
-    padding-top: 100px;
-    overflow-x: hidden;
-    transition: all .5s;
+/*menu*/
+
+nav {
+    width: 250px;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    background: rgba(0, 0, 0, 0.1);
+    border-radius: 10px;
+    box-shadow: 5px 7px 10px rgba(0, 0, 0, 0.5);
 }
 
-.close-btn {
+nav ul {
+    position: relative;
+    top: 50px;
+    list-style-type: none;
+}
+
+nav ul li a {
+    display: flex;
+    align-items: center;
+    font-family: cursive;
+    font-size: 20px;
+    text-decoration: none;
+    text-transform: capitalize;
+    color:black;
+    padding: 10px 30px;
+    height: 50px;
+    transition: 0.5s ease;
+    
+}
+
+nav ul li a:hover {
+    cursor: pointer;
+    color: #fff;
+}
+
+nav ul .cubes {
+    position: absolute;
+    left: 250px;
+    width: 200px;
+    top : 0; 
+    display: none;
+    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.1);
+    background: rgba(0, 0, 0, 0.1);
+}
+
+nav ul .robots {
+    position: absolute;
+    left: 250px;
+    width: 200px;
+    top : 80; 
+    display: none;
+    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.1);
+    background: rgba(0, 0, 0, 0.1);
+}
+
+nav ul span {
     position: absolute;
     right: 20px;
-    top: 5px;
-    font-size: 36px;
+    font-size: 20px;
 }
 
 
+
+nav ul .dropdown:hover ul{
+    display: initial;
+}
+
+
+nav ul .dropdown2:hover ul{
+    display: initial;
+}
+
 #open-btn {
-    font-size: 24px;
-    cursor: pointer;
+    display: none;
     position: absolute;
-    top: 30px;
-    left: 30px;
-    transition: all .6s;
-    
+    top: 12px;
+    cursor: pointer;
+    font-size: 30px;
+}
+
+ .close-btn {
+    position: absolute;
+    top: 10px;
+    right: 5px;
+    cursor: pointer;
+    font-size: 36px;
+    color: rgb(66, 64, 40);
 }
