--- a/style.css
+++ b/style.css
@@ -48,10 +48,36 @@ canvas {
     cursor: pointer;
 }
 
+#gaz-btn  {
+    position: absolute;
+    left: 70px;
+    height: 50px;  
+    width: 100px;
+    cursor: pointer;
+}
+
+#gaz2-btn {
+    position: absolute;
+    top: 38%;
+    left: 70px;
+    height: 50px;  
+    width: 100px;
+    cursor: pointer;
+}
+
+#gaz3-btn {
+    position: absolute;
+    top: 70%;
+    left: 70px;
+    height: 50px;  
+    width: 100px;
+    cursor: pointer;
+}
+
 #move-btn {
     position: absolute;
     top: 90%;
-    left: 55%;
+    left: 50%;
     height: 50px;  
     width: 100px;
     background-color: Transparent;
@@ -65,7 +91,7 @@ canvas {
 #view-btn {
     position: absolute;
     top: 90%;
-    left: 45%;
+    left: 40%;
     height: 50px;  
     width: 100px;
     background-color: Transparent;
@@ -78,8 +104,8 @@ canvas {
 }
 #remove-btn {
     position: absolute;
-    top: 90%;
-    left: 35%;
+    top: 10px;
+    left: 93%;
     height: 60px;  
     width: 100px;
     background-color: Transparent;
@@ -89,6 +115,53 @@ canvas {
     overflow: hidden;   
     font-size: 20px;   
     font-family: cursive;
+}
+
+#remove-rock-btn {
+    position: absolute;
+    top: 100px;
+    left: 93%;
+    height: 60px;  
+    width: 100px;
+    background-color: Transparent;
+    background-repeat:no-repeat;
+    border: none;
+    cursor:pointer;
+    overflow: hidden;   
+    font-size: 20px;   
+    font-family: cursive;
+}
+
+#calculer {
+    position: absolute;
+    top: 200px;
+    left: 93%;
+    height: 60px;  
+    width: 100px;
+    background-color: Transparent;
+    background-repeat:no-repeat;
+    border: none;
+    cursor:pointer;
+    overflow: hidden;   
+    font-size: 20px;   
+    font-family: cursive;
+}
+
+#open-btn {
+    display: none;
+    position: absolute;
+    top: 12px;
+    cursor: pointer;
+    font-size: 30px;
+}
+
+ .close-btn {
+    position: absolute;
+    top: 10px;
+    right: 5px;
+    cursor: pointer;
+    font-size: 36px;
+    color: rgb(66, 64, 40);
 }
 
 
@@ -131,6 +204,22 @@ nav ul li a:hover {
     color: #fff;
 }
 
+
+nav ul .dropdown:hover ul{
+    display: initial;
+}
+
+
+nav ul .dropdown2:hover ul{
+    display: initial;
+}
+
+nav ul .dropdown3:hover ul{
+    display: initial;
+}
+
+
+
 nav ul .cubes {
     position: absolute;
     left: 250px;
@@ -151,6 +240,17 @@ nav ul .robots {
     background: rgba(0, 0, 0, 0.1);
 }
 
+nav ul .gaz {
+    position: absolute;
+    left: 250px;
+    width: 200px;
+    top : 160; 
+    display: none;
+    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.1);
+    background: rgba(0, 0, 0, 0.1);
+}
+
+
 nav ul span {
     position: absolute;
     right: 20px;
@@ -158,30 +258,4 @@ nav ul span {
 }
 
 
-
-nav ul .dropdown:hover ul{
-    display: initial;
-}
-
-
-nav ul .dropdown2:hover ul{
-    display: initial;
-}
-
-#open-btn {
-    display: none;
-    position: absolute;
-    top: 12px;
-    cursor: pointer;
-    font-size: 30px;
-}
-
- .close-btn {
-    position: absolute;
-    top: 10px;
-    right: 5px;
-    cursor: pointer;
-    font-size: 36px;
-    color: rgb(66, 64, 40);
-}
 
