--- a/style.css
+++ b/style.css
@@ -51,6 +51,12 @@ canvas {
     font-size: 40px;  
     text-decoration: none;
 }
+
+#move-btn:hover {
+    color: rgb(255, 255, 255);
+}
+
+
 #view-btn {
     position: absolute;
     top: 90%;
@@ -66,6 +72,11 @@ canvas {
     font-size: 40px;   
     font-family: cursive;
 }
+
+#view-btn:hover {
+    color: rgb(255, 255, 255);
+}
+
 #remove-cube {
     position: absolute;
     top: 10px;
