--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ body {
     background: url('./wallpaper.jpg') center;
     background-size: cover;
 }
-		
+
 
 canvas {
     width: 100%; 
@@ -77,11 +77,11 @@ canvas {
     color: rgb(255, 255, 255);
 }
 
-#remove-fridge {
+#fridge-M1 {
     position: absolute;
-    top: 10px;
-    left: 20%;
-    height: 30px;  
+    top: 0px;
+    height: 15px;
+    left: 20%; 
     width: 150px;
     background-color: Transparent;
     background-repeat:no-repeat;
@@ -89,20 +89,18 @@ canvas {
     border: none;
     cursor:pointer;
     overflow: hidden;   
-    font-size: 20px;   
+    font-size: 18px;   
     font-family: cursive;
 }
 
-#remove-cube:hover {
-    color: rgb(255, 255, 255);
+#fridge-M1:hover {
+    color: rgb(190, 190, 190);
 }
 
-
-#remove-left-fridge {
+#fridge-M2 {
     position: absolute;
-    top: 10px;
-    left: 20%;
-    height: 30px;  
+    top: 25px;
+    left: 20%; 
     width: 150px;
     background-color: Transparent;
     background-repeat:no-repeat;
@@ -110,18 +108,22 @@ canvas {
     border: none;
     cursor:pointer;
     overflow: hidden;   
-    font-size: 20px;   
+    font-size: 18px;   
     font-family: cursive;
 }
-#remove-left-fridge:hover {
-    color: rgb(255, 255, 255);
+
+#fridge-M2:hover {
+    color: rgb(190, 190, 190);
 }
 
-#remove-right-fridge {
+
+
+
+#left-fridge-M1 {
     position: absolute;
-    top: 10px;
-    left: 20%;
-    height: 30px;  
+    top: 0px;
+    height: 15px;
+    left: 20%; 
     width: 150px;
     background-color: Transparent;
     background-repeat:no-repeat;
@@ -129,19 +131,17 @@ canvas {
     border: none;
     cursor:pointer;
     overflow: hidden;   
-    font-size: 20px;   
+    font-size: 18px;   
     font-family: cursive;
 }
-
-#remove-right-fridge:hover {
-    color: rgb(255, 255, 255);
+#left-fridge-M1:hover {
+    color: rgb(190, 190, 190);
 }
 
-#remove-back-fridge {
+#left-fridge-M2 {
     position: absolute;
-    top: 10px;
-    left: 20%;
-    height: 30px;  
+    top: 25px;
+    left: 20%; 
     width: 150px;
     background-color: Transparent;
     background-repeat:no-repeat;
@@ -149,24 +149,101 @@ canvas {
     border: none;
     cursor:pointer;
     overflow: hidden;   
-    font-size: 20px;   
+    font-size: 18px;   
     font-family: cursive;
 }
 
-#remove-back-fridge:hover {
-    color: rgb(255, 255, 255);
+#left-fridge-M2:hover {
+    color: rgb(190, 190, 190);
+}
+
+
+#right-fridge-M1 {
+    position: absolute;
+    top: 0px;
+    height: 15px;
+    left: 20%; 
+    width: 150px;
+    background-color: Transparent;
+    background-repeat:no-repeat;
+    color: rgb(223, 223, 223);
+    border: none;
+    cursor:pointer;
+    overflow: hidden;   
+    font-size: 18px;   
+    font-family: cursive;
+}
+
+#right-fridge-M1:hover {
+    color: rgb(190, 190, 190);
+}
+
+#right-fridge-M2 {
+    position: absolute;
+    top: 25px;
+    left: 20%; 
+    width: 150px;
+    background-color: Transparent;
+    background-repeat:no-repeat;
+    color: rgb(223, 223, 223);
+    border: none;
+    cursor:pointer;
+    overflow: hidden;   
+    font-size: 18px;   
+    font-family: cursive;
+}
+
+#right-fridge-M2:hover {
+    color: rgb(190, 190, 190);
+}
+
+#back-fridge-M1 {
+    position: absolute;
+    top: 0px;
+    height: 15px;
+    left: 20%; 
+    width: 150px;
+    background-color: Transparent;
+    background-repeat:no-repeat;
+    color: rgb(223, 223, 223);
+    border: none;
+    cursor:pointer;
+    overflow: hidden;   
+    font-size: 18px;   
+    font-family: cursive;
+}
+
+#back-fridge-M1:hover {
+    color: rgb(190, 190, 190);
+}
+
+#back-fridge-M2 {
+    position: absolute;
+    top: 25px;
+    left: 20%; 
+    width: 150px;
+    background-color: Transparent;
+    background-repeat:no-repeat;
+    color: rgb(223, 223, 223);
+    border: none;
+    cursor:pointer;
+    overflow: hidden;   
+    font-size: 18px;   
+    font-family: cursive;
+}
+
+#back-fridge-M2:hover {
+    color: rgb(190, 190, 190);
 }
 
 
 #calculer {
     position: absolute;
-    top : 90%; 
-    left: 100px;
-    height: 60px;  
-    width: 100px;
+    top : 682px; 
+    left: 1480px;
     color: rgb(223, 223, 223);  
-    font-size: 30px;   
-    text-decoration: none;
+    font-size: 35px;   
+    
 
 }
 #calculer:hover  {
@@ -180,7 +257,7 @@ canvas {
     top: 12px;
     cursor: pointer;
     font-size: 30px;
-    color: rgb(165, 164, 164);
+    color: rgb(58, 58, 58);
 }
 
 #open-btn:hover{
@@ -193,7 +270,7 @@ canvas {
     right: 5px;
     cursor: pointer;
     font-size: 36px;
-    color: rgb(165, 164, 164);
+    color: rgb(58, 58, 58);
     text-decoration: none;
 }
 
@@ -201,66 +278,8 @@ canvas {
     color: rgb(255, 255, 255);
 }
 
-#open-btn2 {
-    display: none;
-    position: absolute;
-    top: 12px;
-    right : 0px;
-    cursor: pointer;
-    font-size: 30px;
-    color: rgb(165, 164, 164);
-}
-
-#open-btn2:hover{
-    color: rgb(255, 255, 255);
-}
 
 
-#close-btn2 {
-    position: absolute;
-    top: 10px;
-    left: 5px;
-    cursor: pointer;
-    font-size: 36px;
-    color: rgb(165, 164, 164);
-    text-decoration: none;
-}
-
-#close-btn2:hover{
-    color: rgb(223, 223, 223);
-}
-
-
-#menu-cuisine {
-    position : absolute; 
-    right : 0px ;
-    width: 250px;
-    height: 100vh;
-    border-radius: 10px;
-    background: rgba(255, 255, 255, 0.1);
-    box-shadow: 5px 7px 10px rgba(0, 0, 0, 0.1);
-    cursor: pointer;
-}
-
-#cuisine1 {
-    position: absolute;
-    top : 10% ;
-    right : 0px ;
-    width: 250px;
-    height: 200px;
-    background: url('./cuisine1.png');
-    cursor: pointer;
-}
-
-#cuisine2 {
-    position: absolute;
-    top : 40% ;
-    right : 0px ;
-    width: 250px;
-    height: 200px;
-    background: url('./cuisine2.png');
-    cursor: pointer;
-}
 
 
 /*menu*/
@@ -287,16 +306,16 @@ nav ul li a {
     font-family: cursive;
     font-size: 1.15em;
     text-decoration: none;
-    color : rgb(223, 223, 223);
+    color : rgb(255, 255, 255);
     padding: 10px 30px;
-    height: 50px;
+    height: 22px;
     transition: 0.3s ease;
     border-radius: 10px;
 }
 
 nav ul li a:hover  {
     cursor: pointer;
-    color: rgb(255, 255, 255);
+    color: rgb(190, 190, 190);
 }
 
 nav ul ul {
@@ -316,98 +335,159 @@ nav ul span {
     font-size: 20px;
 }
 
-nav ul .dropdown {
+
+nav ul .liste {
     position: relative;
 }
 
-nav ul .dropdown:hover > ul {
+nav ul .liste:hover > ul {
     display: initial;
 }
 
-nav ul .dropdown1_1 ul {
+nav ul .front ul {
     position: absolute;
     left: 240px;
     top: 5px;
+    height: 70px;
 }
 
-nav ul .dropdown1_1:hover ul {
+nav ul .front:hover ul {
     display: initial;
 }
 
-nav ul .dropdown1_2 ul {
+nav ul .left ul {
     position: absolute;
     left: 240px;
-    top: 70px;
+    top: 45px;
+    height: 70px;
 }
 
-nav ul .dropdown1_2:hover ul {
+nav ul .left:hover ul {
     display: initial;
 }
 
-nav ul .dropdown1_3 ul {
+nav ul .right ul {
     position: absolute;
     left: 240px;
-    top: 140px;
+    top: 100px;
+    height: 70px;
 }
-nav ul .dropdown1_3:hover ul {
+
+nav ul .right:hover ul {
     display: initial;
 }
 
-nav ul .dropdown1_4 ul {
+nav ul .back ul {
     position: absolute;
     left: 240px;
-    top: 210px;
+    top: 135px;
+    height: 70px;
 }
-nav ul .dropdown1_4:hover ul {
+
+nav ul .back:hover ul {
     display: initial;
 }
 
+nav ul .front .modele1 ul {
+    display: none;
+    position: absolute;
+    left: 240px;
+    height: 40px;
+}
 
-nav ul .dropdown2 {
+nav ul .front .modele1:hover ul {
+    display: initial;
+}
+
+nav ul .front .modele2 ul {
+    display: none;
+    position: absolute;
+    top: 28px;
+    left: 240px;
+    height: 40px;
+}
+
+nav ul .front .modele2:hover ul {
+    display: initial;
+}
+
+nav ul .left .modele1 ul {
+    display: none;
+    position: absolute;
+    top: 1px;
+    left: 240px;
+    height: 40px;
+}
+
+nav ul .left .modele1:hover ul {
+    display: initial;
+}
+
+nav ul .left .modele2 ul {
+    display: none;
+    position: absolute;
+    top: 28px;
+    left: 240px;
+    height: 40px;
+}
+
+nav ul .left .modele2:hover ul {
+    display: initial;
+}
+
+nav ul .right .modele1 ul {
+    display: none;
+    position: absolute;
+    top: 1px;
+    left: 240px;
+    height: 40px;
+}
+
+nav ul .right .modele1:hover ul {
+    display: initial;
+}
+
+nav ul .right .modele2 ul {
+    display: none;
+    position: absolute;
+    top: 28px;
+    left: 240px;
+    height: 40px;
+}
+
+nav ul .right .modele2:hover ul {
+    display: initial;
+}
+
+nav ul .back .modele1 ul {
+    display: none;
+    position: absolute;
+    top: 1px;
+    left: 240px;
+    height: 40px;
+}
+
+nav ul .back .modele1:hover ul {
+    display: initial;
+}
+
+nav ul .back .modele2 ul {
+    display: none;
+    position: absolute;
+    top: 28px;
+    left: 240px;
+    height: 40px;
+}
+
+nav ul .back .modele2:hover ul {
+    display: initial;
+}
+
+nav ul #cuisine {
     position: relative;
 }
 
-nav ul .dropdown2:hover > ul {
-    display: initial;
-}
-
-nav ul .dropdown2_1 ul {
-    position: absolute;
-    left: 240px;
-    top: 5px;
-}
-
-nav ul .dropdown2_1:hover ul {
-    display: initial;
-}
-
-nav ul .dropdown2_2 ul {
-    position: absolute;
-    left: 240px;
-    top: 70px;
-}
-
-nav ul .dropdown2_2:hover ul {
-    display: initial;
-}
-
-nav ul .dropdown2_3 ul {
-    position: absolute;
-    left: 240px;
-    top: 140px;
-}
-
-nav ul .dropdown2_3:hover ul {
-    display: initial;
-}
-
-nav ul .dropdown2_4 ul {
-    position: absolute;
-    left: 240px;
-    top: 210px;
-}
-
-nav ul .dropdown2_4:hover ul {
+nav ul #cuisine:hover > ul {
     display: initial;
 }
 
@@ -420,3 +500,155 @@ nav ul .dropdown2_4:hover ul {
     position: absolute;
     left: 400px;
 }
+
+#logo {
+    position: absolute;
+    left: 1400px;
+    width: 100px;
+    height: 100px;
+}
+
+#elements-btn{
+    position: relative;
+    top: 50px;
+    left: 70px;
+    display: flex;
+    align-items: center;
+    font-family: cursive;
+    font-size: 20px;
+    text-decoration: none;
+    color: rgb(167, 167, 167); 
+    cursor: pointer;
+    margin-bottom: 5px;
+    margin-top: 5px;
+}
+
+#elements-btn:hover  {
+    color: rgb(255, 255, 255);
+}
+
+.elements-plus-btn{
+    position: relative;
+    top: 30px;
+}
+
+#elements {
+    display: none;
+}
+
+#cuisines-btn {
+    font-size: 20px;
+    color: rgb(167, 167, 167); 
+}
+
+
+#cuisines-btn:hover {
+    color: rgb(255, 255, 255);
+}
+
+.popup .overlay {
+    position:fixed;
+    top:0px;
+    left:0px;
+    width:100vw;
+    height:100vh;
+    background:rgba(0,0,0,0.7);
+    z-index:1;
+    display:none;
+  }
+   
+  .popup .content {
+    position:absolute;
+    top:35%;
+    left:50%;
+    transform:translate(-50%,-50%) scale(0);
+    background:rgb(247, 247, 247);
+    width:500px;
+    height:500px;
+    z-index:2;
+    padding:20px;
+    box-sizing:border-box;
+    font-family: monospace;
+    font-size: 17px;
+  }
+   
+  .popup .close-btn {
+    cursor:pointer;
+    position:absolute;
+    right:20px;
+    top:20px;
+    width:30px;
+    height:30px;
+    background:#222;
+    color:#fff;
+    font-size:25px;
+    font-weight:600;
+    line-height:30px;
+    text-align:center;
+    border-radius:50%;
+  }
+   
+  .popup.active .overlay {
+    display:block;
+  }
+   
+  .popup.active .content {
+    transition:all 300ms ease-in-out;
+    transform:translate(-50%,-50%) scale(1);
+  }
+   
+
+  .titre-popup {
+    text-align: center;
+  }
+
+  .popup2 .overlay2 {
+    position:fixed;
+    top:0px;
+    left:0px;
+    width:100vw;
+    height:100vh;
+    background:rgba(0,0,0,0.7);
+    z-index:1;
+    display:none;
+  }
+   
+  .popup2 .content2 {
+    position:absolute;
+    top:10%;
+    left:50%;
+    transform:translate(-50%,-50%) scale(0);
+    background:rgb(247, 247, 247);
+    width:500px;
+    height:100px;
+    z-index:2;
+    padding:20px;
+    box-sizing:border-box;
+    font-family: monospace;
+    font-size: 17px;
+  }
+   
+  .popup2 .close-btn2 {
+    cursor:pointer;
+    position:absolute;
+    right:20px;
+    top:20px;
+    width:30px;
+    height:30px;
+    background:#222;
+    color:#fff;
+    font-size:25px;
+    font-weight:600;
+    line-height:30px;
+    text-align:center;
+    border-radius:50%;
+  }
+   
+  .popup2.active .overlay2 {
+    display:block;
+  }
+   
+  .popup2.active .content2 {
+    transition:all 300ms ease-in-out;
+    transform:translate(-50%,-50%) scale(1);
+  }
