--- a/style.css
+++ b/style.css
@@ -243,11 +243,21 @@ canvas {
     left: 1480px;
     color: rgb(223, 223, 223);  
     font-size: 35px;   
-    
-
 }
+
 #calculer:hover  {
-    cursor: pointer;
+    color: rgb(255, 255, 255);
+}
+
+#prices {
+    position: absolute;
+    top : 600px; 
+    left: 1480px;
+    color: rgb(223, 223, 223);  
+    font-size: 35px; 
+}
+
+#prices:hover {
     color: rgb(255, 255, 255);
 }
 
@@ -572,7 +582,7 @@ nav ul #cuisine:hover > ul {
     font-size: 17px;
   }
    
-  .popup .close-btn {
+  .popup .close-button {
     cursor:pointer;
     position:absolute;
     right:20px;
@@ -628,7 +638,7 @@ nav ul #cuisine:hover > ul {
     font-size: 17px;
   }
    
-  .popup2 .close-btn2 {
+  .popup2 .close-button2 {
     cursor:pointer;
     position:absolute;
     right:20px;
@@ -652,3 +662,59 @@ nav ul #cuisine:hover > ul {
     transition:all 300ms ease-in-out;
     transform:translate(-50%,-50%) scale(1);
   }
+
+  .popup3 .overlay3 {
+    position:fixed;
+    top:0px;
+    left:0px;
+    width:100vw;
+    height:100vh;
+    background:rgba(0,0,0,0.7);
+    z-index:1;
+    display:none;
+  }
+   
+  .popup3 .content3 {
+    position:absolute;
+    top:35%;
+    left:50%;
+    transform:translate(-50%,-50%) scale(0);
+    background:rgb(247, 247, 247);
+    width:500px;
+    height:450px;
+    z-index:2;
+    padding:20px;
+    box-sizing:border-box;
+    font-family: monospace;
+    font-size: 17px;
+  }
+   
+  .popup3 .close-button3 {
+    cursor:pointer;
+    position:absolute;
+    right:20px;
+    top:20px;
+    width:30px;
+    height:30px;
+    background:#222;
+    color:#fff;
+    font-size:25px;
+    font-weight:600;
+    line-height:30px;
+    text-align:center;
+    border-radius:50%;
+  }
+   
+  .popup3.active .overlay3 {
+    display:block;
+  }
+   
+  .popup3.active .content3 {
+    transition:all 300ms ease-in-out;
+    transform:translate(-50%,-50%) scale(1);
+  }
+
+  .titre-popup3 {
+    text-align: center;
+  }
+
